[gd_scene load_steps=13 format=3 uid="uid://sfyhw26gt1vr"]

[ext_resource type="Theme" uid="uid://jht6a2okt2tm" path="res://Scenes/Menus/Themes/Menu.tres" id="1_chkef"]
[ext_resource type="Script" uid="uid://qms6jwawphbd" path="res://Scenes/Menus/main_menu.gd" id="1_s0654"]
[ext_resource type="Script" uid="uid://bqf3gg45lvvqs" path="res://Scenes/Menus/Settings/settings_menu.gd" id="3_covw7"]
[ext_resource type="PackedScene" uid="uid://c0l3qjhe6dbei" path="res://Scenes/Levels/Block_00/Level01.tscn" id="3_j4kqa"]
[ext_resource type="Texture2D" uid="uid://ctxq1b6jvonlu" path="res://Scenes/Menus/images/MainMenu.png" id="4_aur2u"]
[ext_resource type="PackedScene" uid="uid://biydgimsupr5q" path="res://tittle.tscn" id="5_4fgt5"]
[ext_resource type="PackedScene" uid="uid://dbehr8mfolttb" path="res://Scenes/Utility/SmartMusicPlayer.tscn" id="7_4fgt5"]
[ext_resource type="AudioStream" uid="uid://d2tfnsct46q64" path="res://music/lab_ambience.wav" id="8_j4kqa"]

[sub_resource type="Shader" id="Shader_4fgt5"]
code = "/*
Shader from Godot Shaders - the free shader library.

This shader is under CC0 license. Feel free to use, improve and
change this shader according to your needs and consider sharing
the modified result to godotshaders.com.

Optimised and packed by @c64cosmin
If you do use this please share it with me
Would love to see what you're making with it <3

It's a combination of these two shaders
~godotshaders.com/shader/VHS-and-CRT-monitor-effect
godotshaders.com/shader/crt-shader-with-realistic-blurring/

CRT grille and rolling lines made by @c64cosmin
Vignette and warping effect was made by pend00
Scanlines are from \"TimothyLottes\" FROM SHADERTOY
Then ported by AHOPNESS (@ahopness)
https://www.shadertoy.com/view/MsjXzh
*/

shader_type canvas_item;

uniform sampler2D SCREEN_TEXTURE: hint_screen_texture;

uniform vec2 resolution = vec2(320.0, 180.0);

uniform float scan_line_amount :hint_range(0.0, 1.0) = 1.0;
uniform float warp_amount :hint_range(0.0, 5.0) = 0.1;
uniform float noise_amount :hint_range(0.0, 0.3) = 0.03;
uniform float interference_amount :hint_range(0.0, 1.0) = 0.2;
uniform float grille_amount :hint_range(0.0, 1.0) = 0.1;
uniform float grille_size :hint_range(1.0, 5.0) = 1.0;
uniform float vignette_amount :hint_range(0.0, 2.0) = 0.6;
uniform float vignette_intensity : hint_range(0.0, 1.0) = 0.4;
uniform float aberation_amount :hint_range(0.0, 1.0) = 0.5;
uniform float roll_line_amount :hint_range(0.0, 1.0) = 0.3;
uniform float roll_speed :hint_range(-8.0, 8.0) = 1.0;
uniform float scan_line_strength :hint_range(-12.0, -1.0) = -8.0;
uniform float pixel_strength :hint_range(-4.0, 0.0) = -2.0;

float random(vec2 uv){
    return fract(cos(uv.x * 83.4827 + uv.y * 92.2842) * 43758.5453123);
}

vec3 fetch_pixel(vec2 uv, vec2 off){
	vec2 pos = floor(uv * resolution + off) / resolution + vec2(0.5) / resolution;

	float noise = 0.0;
	if(noise_amount > 0.0){
		noise = random(pos + fract(TIME)) * noise_amount;
	}

	if(max(abs(pos.x - 0.5), abs(pos.y - 0.5)) > 0.5){
		return vec3(0.0, 0.0, 0.0);
	}

	vec3 clr = texture(SCREEN_TEXTURE , pos, -16.0).rgb + noise;
	return clr;
}

// Distance in emulated pixels to nearest texel.
vec2 Dist(vec2 pos){
	pos = pos * resolution;
	return - ((pos - floor(pos)) - vec2(0.5));
}

// 1D Gaussian.
float Gaus(float pos, float scale){ return exp2(scale * pos * pos); }

// 3-tap Gaussian filter along horz line.
vec3 Horz3(vec2 pos, float off){
	vec3 b = fetch_pixel(pos, vec2(-1.0, off));
	vec3 c = fetch_pixel(pos, vec2( 0.0, off));
	vec3 d = fetch_pixel(pos, vec2( 1.0, off));
	float dst = Dist(pos).x;

	// Convert distance to weight.
	float scale = pixel_strength;
	float wb = Gaus(dst - 1.0, scale);
	float wc = Gaus(dst + 0.0, scale);
	float wd = Gaus(dst + 1.0, scale);

	// Return filtered sample.
	return (b * wb + c * wc + d * wd) / (wb + wc + wd);
}

// Return scanline weight.
float Scan(vec2 pos, float off){
	float dst = Dist(pos).y;

	return Gaus(dst + off, scan_line_strength);
}

// Allow nearest three lines to effect pixel.
vec3 Tri(vec2 pos){
	vec3 clr = fetch_pixel(pos, vec2(0.0));
	if(scan_line_amount > 0.0){
		vec3 a = Horz3(pos,-1.0);
		vec3 b = Horz3(pos, 0.0);
		vec3 c = Horz3(pos, 1.0);

		float wa = Scan(pos,-1.0);
		float wb = Scan(pos, 0.0);
		float wc = Scan(pos, 1.0);

		vec3 scanlines = a * wa + b * wb + c * wc;
		clr = mix(clr, scanlines, scan_line_amount);
	}
	return clr;
}

// Takes in the UV and warps the edges, creating the spherized effect
vec2 warp(vec2 uv){
	vec2 delta = uv - 0.5;
	float delta2 = dot(delta.xy, delta.xy);
	float delta4 = delta2 * delta2;
	float delta_offset = delta4 * warp_amount;

	vec2 warped = uv + delta * delta_offset;
	return (warped - 0.5) / mix(1.0,1.2,warp_amount/5.0) + 0.5;
}

float vignette(vec2 uv){
	uv *= 1.0 - uv.xy;
	float vignette = uv.x * uv.y * 15.0;
	return pow(vignette, vignette_intensity * vignette_amount);
}

float floating_mod(float a, float b){
	return a - b * floor(a/b);
}

vec3 grille(vec2 uv){
	float unit = PI / 3.0;
	float scale = 2.0*unit/grille_size;
	float r = smoothstep(0.5, 0.8, cos(uv.x*scale - unit));
	float g = smoothstep(0.5, 0.8, cos(uv.x*scale + unit));
	float b = smoothstep(0.5, 0.8, cos(uv.x*scale + 3.0*unit));
	return mix(vec3(1.0), vec3(r,g,b), grille_amount);
}

float roll_line(vec2 uv){
	float x = uv.y * 3.0 - TIME * roll_speed;
	float f = cos(x) * cos(x * 2.35 + 1.1) * cos(x * 4.45 + 2.3);
	float roll_line = smoothstep(0.5, 0.9, f);
	return roll_line * roll_line_amount;
}

void fragment(){
	vec2 pix = FRAGCOORD.xy;
	vec2 pos = warp(SCREEN_UV);

	float line = 0.0;
	if(roll_line_amount > 0.0){
		line = roll_line(pos);
	}

	vec2 sq_pix = floor(pos * resolution) / resolution + vec2(0.5) / resolution;
	if(interference_amount + roll_line_amount > 0.0){
		float interference = random(sq_pix.yy + fract(TIME));
		pos.x += (interference * (interference_amount + line * 6.0)) / resolution.x;
	}

	vec3 clr = Tri(pos);
	if(aberation_amount > 0.0){
		float chromatic = aberation_amount + line * 2.0;
		vec2 chromatic_x = vec2(chromatic,0.0) / resolution.x;
		vec2 chromatic_y = vec2(0.0, chromatic/2.0) / resolution.y;
		float r = Tri(pos - chromatic_x).r;
		float g = Tri(pos + chromatic_y).g;
		float b = Tri(pos + chromatic_x).b;
		clr = vec3(r,g,b);
	}

	if(grille_amount > 0.0)clr *= grille(pix);
	clr *= 1.0 + scan_line_amount * 0.6 + line * 3.0 + grille_amount * 2.0;
	if(vignette_amount > 0.0)clr *= vignette(pos);

	COLOR.rgb = clr;
	COLOR.a = 1.0;
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t0rlu"]
shader = SubResource("Shader_4fgt5")
shader_parameter/resolution = Vector2(1000, 1000)
shader_parameter/scan_line_amount = 1.0
shader_parameter/warp_amount = 0.378
shader_parameter/noise_amount = 0.078
shader_parameter/interference_amount = 0.57
shader_parameter/grille_amount = 0.1
shader_parameter/grille_size = 1.0
shader_parameter/vignette_amount = 0.656
shader_parameter/vignette_intensity = 1.0
shader_parameter/aberation_amount = 0.139
shader_parameter/roll_line_amount = 0.3
shader_parameter/roll_speed = 1.0
shader_parameter/scan_line_strength = -3.416
shader_parameter/pixel_strength = -2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q5qts"]
bg_color = Color(0.76, 0.2508, 0.2508, 1)
expand_margin_top = 33.0
expand_margin_bottom = 33.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ftsii"]
bg_color = Color(0, 0, 0, 0.835294)

[node name="Menu" type="Control" node_paths=PackedStringArray("start_button")]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_chkef")
script = ExtResource("1_s0654")
start = ExtResource("3_j4kqa")
start_button = NodePath("MainMenu/VBoxContainer/PlayButton")

[node name="Menu Texture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_aur2u")
expand_mode = 2
stretch_mode = 4

[node name="Graining" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_t0rlu")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Tittle" parent="." instance=ExtResource("5_4fgt5")]
layout_mode = 1

[node name="MainMenu" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.637
anchor_top = 0.343
anchor_right = 0.863
anchor_bottom = 0.91
offset_left = 0.175964
offset_top = -0.264023
offset_right = -0.176025
offset_bottom = 0.320007
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="PlayButton" type="Button" parent="MainMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 4
text = "Play"

[node name="SettingsButton" type="Button" parent="MainMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 4
text = "Settings"

[node name="CreditsButton" type="Button" parent="MainMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 4
text = "Credits"

[node name="SettingsMenu" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_covw7")

[node name="Panel" type="Panel" parent="SettingsMenu"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="SettingsMenu/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_right = 64

[node name="VBoxContainer2" type="VBoxContainer" parent="SettingsMenu/Panel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 64

[node name="GridContainer" type="GridContainer" parent="SettingsMenu/Panel/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 32
theme_override_constants/v_separation = 64
columns = 3

[node name="Label" type="Label" parent="SettingsMenu/Panel/MarginContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 88
text = "Volume:"

[node name="PanelContainer" type="PanelContainer" parent="SettingsMenu/Panel/MarginContainer/VBoxContainer2/GridContainer"]
custom_minimum_size = Vector2(1500, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="SettingsMenu/Panel/MarginContainer/VBoxContainer2/GridContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="VolumeSlider" type="HSlider" parent="SettingsMenu/Panel/MarginContainer/VBoxContainer2/GridContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/slider = SubResource("StyleBoxFlat_q5qts")
max_value = 1.0
step = 0.01
value = 1.0

[node name="VolumeLabel" type="Label" parent="SettingsMenu/Panel/MarginContainer/VBoxContainer2/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "100%"

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenu/Panel/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 24

[node name="PanelContainer" type="PanelContainer" parent="SettingsMenu/Panel/MarginContainer/VBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="Reset" type="Button" parent="SettingsMenu/Panel/MarginContainer/VBoxContainer2/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Reset
"

[node name="PanelContainer2" type="PanelContainer" parent="SettingsMenu/Panel/MarginContainer/VBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="BackFromCredits2" type="Button" parent="SettingsMenu/Panel/MarginContainer/VBoxContainer2/VBoxContainer/PanelContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Back"

[node name="CreditsMenu" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ftsii")

[node name="Credits" type="VBoxContainer" parent="CreditsMenu"]
layout_mode = 2
theme_override_constants/separation = 86

[node name="Label6" type="Label" parent="CreditsMenu/Credits"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 128
text = "Game Made By 3 Scalies 1 Normie"

[node name="Lead Programmer" type="GridContainer" parent="CreditsMenu/Credits"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 32
columns = 2

[node name="Label" type="Label" parent="CreditsMenu/Credits/Lead Programmer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "Lead Programer 
Game Lead"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="CreditsMenu/Credits/Lead Programmer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "BestLizard 
(Evan Larose)"

[node name="Label2" type="Label" parent="CreditsMenu/Credits/Lead Programmer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "Junior Programer
Asset Slave"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="CreditsMenu/Credits/Lead Programmer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "ScalesInLight"

[node name="Label5" type="Label" parent="CreditsMenu/Credits/Lead Programmer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "SFX 
 Roped Level Designer"
horizontal_alignment = 1

[node name="Label6" type="Label" parent="CreditsMenu/Credits/Lead Programmer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "BestLizards Brother 
(Ethan Larose)"
horizontal_alignment = 1

[node name="Label7" type="Label" parent="CreditsMenu/Credits/Lead Programmer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "Music  
SoundSmith"
horizontal_alignment = 1

[node name="Label8" type="Label" parent="CreditsMenu/Credits/Lead Programmer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "Weso"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="CreditsMenu/Credits"]
custom_minimum_size = Vector2(600, 120)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="BackFromCredits" type="Button" parent="CreditsMenu/Credits/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Back"

[node name="SmartMusicPlayer" parent="." instance=ExtResource("7_4fgt5")]
music = ExtResource("8_j4kqa")
